--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 PROJECT_NAME=Klymo Backend
 BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
+
+# Database Connection String
+# Format: postgresql://<username>:<password>@<host>:<port>/<db_name>
+DATABASE_URL=postgresql://postgres.shpjvimcmccwglgyvhjg:%23Ananyagarg30@aws-1-ap-southeast-2.pooler.supabase.com:6543/postgres
