--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,13 @@
 PROJECT_NAME=Klymo Backend
 BACKEND_CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
+
+
+# Redis config
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+
+# Security
+# SECRET_KEY=your-secret-key-here
+
